Bug 307600 - colors for marked mails disappear
Summary: colors for marked mails disappear
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: message list (other bugs)
Version First Reported In: 4.9.1
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
: 308171 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-09-30 08:46 UTC by Thomas Tanghus
Modified: 2012-10-15 18:06 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.10
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Thomas Tanghus 2012-09-30 08:46:25 UTC
I often use to mark my messages as important or action item. Now this has stopped working.

Reproducible: Always

Steps to Reproduce:
1. Mark a message as important.
2. Notice the color chosen for that flash briefly then go back to the normal text color.
Actual Results:  
The colors for important/action item flashes briefly when you mark a message. The same happens if you change the color to be used and click Apply/OK.

Expected Results:  
The marked messages should keep the color chosen for it.
Comment 1 Laurent Montel 2012-09-30 08:54:36 UTC
It's not a problem in kmail.
it's nepomuk_indexer which add a nepomuk tag which doesn't have color for text.
Comment 2 Thomas Tanghus 2012-09-30 09:47:19 UTC
Then what are the colors under "Customize Visual Appearance"=>"Colors" for? I can mark my messages as important or Action Item (which are present in that list), but the colors for them don't show. Under message tags I can choose ToDo, but not Action item. It might be very clever, but it is highly unintuitive.
Comment 3 Laurent Montel 2012-10-11 08:23:38 UTC
*** Bug 308171 has been marked as a duplicate of this bug. ***
Comment 4 Thomas Tanghus 2012-10-15 14:14:46 UTC
To add to the confusion. I configured the "Important" nepomuk tag to have red text, and I had about the same functionality as in previous versions. Now I just removed the "Important" tag from a message, but the text is still red. Restarting KMail doesn't help.
I now see that this is the same as Bug #308171
Comment 5 Laurent Montel 2012-10-15 18:06:41 UTC
Git commit 05f5c0cad34198202ac0fc8b5f9d9f1f5604cd20 by Montel Laurent.
Committed on 15/10/2012 at 20:04.
Pushed by mlaurent into branch 'master'.

Fix Bug 307600 - colors for marked mails disappear

don't allow to delete status tag. Fix Rename tag (don't autorize to

create 2 tags with same name).
Don't allow to change tag from status (as replied etc.)

FIXED-IN: 4.10

M  +40   -9    kmail/configuredialog.cpp
M  +13   -0    kmail/tag.cpp
M  +1    -0    kmail/tag.h
M  +2    -0    kmail/tagactionmanager.cpp
M  +2    -0    kmail/tagselectdialog.cpp

http://commits.kde.org/kdepim/05f5c0cad34198202ac0fc8b5f9d9f1f5604cd20