Fix Bug 307600 - colors for marked mails disappear

don't allow to delete status tag. Fix Rename tag (don't autorize to

create 2 tags with same name).
Don't allow to change tag from status (as replied etc.)

FIXED-IN: 4.10
BUG: 307600