tagselectdialog.cpp
@@ -71,6 +71,8 @@ TagSelectDialog::TagSelectDialog( QWidget * parent, int numberOfSelectedMessages
   Nepomuk2::Resource itemResource( selectedItem.url() );
 
   foreach( const Tag::Ptr &tag, tagList ) {
+    if(tag->tagStatus)
+      continue;
     QListWidgetItem *item = new QListWidgetItem( tag->tagName, mListTag );
     item->setFlags( Qt::ItemIsUserCheckable | Qt::ItemIsEnabled | Qt::ItemIsSelectable );
     item->setCheckState( Qt::Unchecked );
